kubernetes/kustomizations/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  annotations:
    argocd.argoproj.io/sync-options: Delete=false,Prune=false
