kubernetes/kustomizations/media/statefulset-jellyfin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    app: jellyfin
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              protocol: "TCP"
              name: web
          livenessProbe:
            httpGet:
              path: /system/ping
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-ssd
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
  serviceName: jellyfin
