kubernetes/kustomizations/media/statefulset-sonarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.16
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
          ports:
            - containerPort: 8989
              protocol: "TCP"
              name: web
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /run
              name: run
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-ssd
        - name: run
          emptyDir: {}
  serviceName: sonarr
