kubernetes/kustomizations/media/service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
      name: web
  selector:
    app: jellyfin
  clusterIP: None
