kubernetes/kustomizations/media/service-nzbget.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nzbget
  name: nzbget
spec:
  ports:
    - port: 6789
      protocol: TCP
      targetPort: 6789
      name: web
  selector:
    app: nzbget
  clusterIP: None
