kubernetes/kustomizations/media/service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
      name: web
  selector:
    app: sonarr
  clusterIP: None
