kubernetes/kustomizations/media/ingress-bazarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  tls:
    - hosts:
        - bazarr.zmuda.pro
      secretName: bazarr-tls
  rules:
    - host: bazarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  name: web
