kubernetes/kustomizations/media/ingress-nzbget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
spec:
  tls:
    - hosts:
        - nzbget.zmuda.pro
      secretName: nzbget-tls
  rules:
    - host: nzbget.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nzbget
                port:
                  name: web
