kubernetes/kustomizations/media/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
spec:
  tls:
    - hosts:
        - radarr.zmuda.pro
      secretName: radarr-tls
  rules:
    - host: radarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: web
