kubernetes/kustomizations/media/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  tls:
    - hosts:
        - sonarr.zmuda.pro
      secretName: sonarr-tls
  rules:
    - host: sonarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  name: web
